--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ body{
 
 @keyframes words{
     0%, 20%{
-        content: "Bachata"
+        content: "Salsa"
     }
     21%, 40%{
         content: "Bolero"
@@ -979,11 +979,11 @@ body{
 
     .testimonials-box h2{
         font-size: 7rem;
-        margin-bottom:3%;
+        margin-bottom:5%;
     }
 
     .testimonial-item{
-        max-width:450px;
+        max-width:470px;
         gap:2.2rem;
     }
 
